--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "numpy>=2.2.4",
     "httpx>=0.28.1",
+    "pillow>=11.1.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
